--- a/index.html
+++ b/index.html
@@ -1,26 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Home</title>
+ <meta charset="UTF-8">
+ <title>Ana Baide</title>
 </head>
+<style>
+body{
+ background-image:url(images/gg.gif);
+}
+</style>
+<style>
+h1{color:white}
+h2{color:white}
+li{color:white}
+a{color:white}
+p{color:white}
+</style>
 <body>
-  <h1>Ana Baide</h>
-  <p>I´m a senior in <a href="http://google.com">high school</a>, my favorite color is purple</p>
-  <p>This is the <em>first</em> <strong>website</strong>
-    <ul>
-      <li>one</li>
-      <li>two</li>
-    </ul>
-    <ol>
-      <li>Ana</li>
-      <li>Baide</li>
-    </ol>
-  <img src="images/hello.jpeg" alt="hello picture" heigth="333" width="500">
-  <table id=table1>
-		<tr><th>T</th><th>AB</th><th>LE</th></tr>
-		<tr><td>One</td><td>Two</td><td>Three</td></tr>
-		<tr><td>Four</td><td>Five</td><td>Six</td></tr>
-	</table>
+ <header>
+   <h1>Ana Sofia Baide</h1>
+   <nav>
+     <a href="http://www.youtube.com">One</a>
+     <a href="http://www.coursera.org">Two</a>
+     <a href="http://www.google.com">Three</a>
+     <a href="http://www.pinterest.com">Pinterest</a>
+   </nav>
+ </header>
+ <section>
+ <h2>Favorite Foods</h2>
+   <ul>
+   <li>Burgers</li>
+   <li>French Fries</li>
+   <li>Pizza</li>
+   <li>Chocolate Cake</li>
+ </ul>
+</section>
+<section>
+ <h2>Achivements</h2>
+ <p>Progress in this course (100%)<progress value="100" max="100"></progress>
+ <br>
+ Progress in the Specialization capstone (20%)<progress value="20" max="100"></progress>
+ <br>
+ Progress in life goals(20%)<progress value="20" max="100"></progress></p>
+</section>
+<section>
+ <h2>More About Me</h2>
+ <details open>
+   <summary>My Childhood</summary>
+   <p>I grew up in Cortes, Honduras. I live in San Pedro Sula, a very hot place.</p>
+ </details>
+</section>
+ <footer>
+   <p><img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Logo">This page was created by Ana Baide &amp; Colleen van Lent. To Learn more about web design, visit <a href="http://www.intro-webdesign.com/">Intro to Web Design</a></p>
+ </footer>
 </body>
 </html>
