--- a/homepage.html
+++ b/homepage.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
+  <style type="text/css">
+    body{background:orange;}
+    h1{color:white;}
+  </style>
+
 </head>
 <body>
   <h1>Ana Baide</h>
@@ -22,5 +27,8 @@
 		<tr><td>One</td><td>Two</td><td>Three</td></tr>
 		<tr><td>Four</td><td>Five</td><td>Six</td></tr>
 	</table>
+
+  <em>This doc was created on</em> <time datatime="2013-08-30 13:41">August 30th, 2013</time>
+
 </body>
 </html>
