--- a/index.html
+++ b/index.html
@@ -3,19 +3,8 @@
 <head>
  <meta charset="UTF-8">
  <title>Home</title>
+ <link rel="stylesheet" href="Style01.css">
 </head>
-<style>
-body{
- background-image:url(images/gg.gif);
-}
-</style>
-<style>
-h1{color:white}
-h2{color:white}
-li{color:white}
-a{color:white}
-p{color:white}
-</style>
 <body>
  <header>
    <h1>Ana Sofia Baide</h1>
@@ -26,7 +15,7 @@ p{color:white}
      <a href="http://www.pinterest.com">Pinterest</a>
    </nav>
  </header>
- <section>
+ <section class="half">
  <h2>Favorite Foods</h2>
    <ul>
    <li>Burgers</li>
@@ -35,7 +24,7 @@ p{color:white}
    <li>Chocolate Cake</li>
  </ul>
 </section>
-<section>
+<section class="half">
  <h2>Achivements</h2>
  <p>Progress in this course (100%)<progress value="100" max="100"></progress>
  <br>
@@ -43,7 +32,7 @@ p{color:white}
  <br>
  Progress in life goals(20%)<progress value="20" max="100"></progress></p>
 </section>
-<section>
+<section class="whole">
  <h2>More About Me</h2>
  <details open>
    <summary>My Childhood</summary>
