--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="UTF-8">
  <title>Home</title>
- <link rel="stylesheet" href="css/Style01.css">
+ <link rel="stylesheet" href="css/indexstyle.css">
 </head>
 <body>
  <header>
