--- a/index.html
+++ b/index.html
@@ -1,46 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <title>Home</title>
- <link rel="stylesheet" href="css/indexstyle.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <title>Home</title>
+  <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
+  <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/indexstyle.css">
 </head>
 <body>
- <header>
-   <h1>Ana Sofia Baide</h1>
-   <nav>
-     <a href="http://www.youtube.com">One</a>
-     <a href="http://www.coursera.org">Two</a>
-     <a href="http://www.google.com">Three</a>
-     <a href="http://www.pinterest.com">Pinterest</a>
-   </nav>
- </header>
- <section class="half">
- <h2>Favorite Foods</h2>
-   <ul>
-   <li>Burgers</li>
-   <li>French Fries</li>
-   <li>Pizza</li>
-   <li>Chocolate Cake</li>
- </ul>
-</section>
-<section class="half">
- <h2>Achivements</h2>
- <p>Progress in this course (100%)<progress value="100" max="100"></progress>
- <br>
- Progress in the Specialization capstone (20%)<progress value="20" max="100"></progress>
- <br>
- Progress in life goals(20%)<progress value="20" max="100"></progress></p>
-</section>
-<section class="whole">
- <h2>More About Me</h2>
- <details open>
-   <summary>My Childhood</summary>
-   <p>I grew up in Cortes, Honduras. I live in San Pedro Sula, a very hot place.</p>
- </details>
-</section>
- <footer>
-   <p><img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Logo">This page was created by Ana Baide &amp; Colleen van Lent. To Learn more about web design, visit <a href="http://www.intro-webdesign.com/">Intro to Web Design</a></p>
- </footer>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-4">
+        <a href="HomePP.html"><img src="images/logoyellow.png" alt="Logo" class=logoup></a> 
+      </div>
+      <div class="col-sm-2"></div>
+      <div class="col-sm-6">
+        <header>
+          <nav class="navbar">
+            <a href = "index.html" class="active">Home</a>
+            <a href = "">Sign In</a>
+            <a href = "">Register</a>
+            <a href = "">Contact Us</a>
+          </nav>      
+        </header>
+        
+      </div>
+    </div>
+  </div>
+  <section class="intro">
+    <p>This program combines education and technology to get a better enrichment from the world. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+  </section>
+  <img src="images/crayon.jpg" alt="crayon" class="crayon">
+  <section class="ctitle">
+    <h1>Choose Your Program</h1>
+  </section>
+  <div class="one">
+    <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">High School Degree</a></h5>
+      <ul>
+        <li>Sciences</li>
+        <li>Mathematics</li>
+        <li>Languages</li>
+      </ul>
+    </section>
+    <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">AP Courses</a></h5>
+      <ul>
+        <li>Calculus AB and BC</li>
+        <li>Science</li>
+        <li>History</li>
+      </ul>
+    </section>
+    <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Test Practice</a></h5>
+      <ul>
+        <li>SAT</li>
+        <li>Subject SAT</li>
+        <li>ACT or TOEFL</li>
+      </ul>
+    </section>
+    <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Online Courses</a></h5>
+      <ul>
+        <li>Variety of Courses</li>
+        <li>Calculus</li>
+        <li>World History</li>
+      </ul>
+    </section>
+  </div>
+  <h1 class="ctitle">Create your Course</h1>
+  <div class="two">   
+    <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Teachers</a></h5>
+      <ul>
+        <li>Create your Course</li>
+        <li>Edit your Courses</li>
+        <li>Tutor Online</li>
+      </ul>
+    </section>
+    <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Schools</a></h5>
+      <ul>
+        <li>Create Classes</li>
+        <li>Check Progress</li>
+        <li>Have Courses</li>
+      </ul>
+    </section>
+  </div> 
+  <footer>
+    <p>To learn more about educating your country virtual, visit <a href="http://www.educatingtheworld.com/introducingtoyourworld">Visit Here</a>.</p>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="bootstrap-4.1.2-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
