--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/indexstyle.css">
+  <link rel="stylesheet" href="indexstyle.css">
 </head>
 <body>
 
