--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Home</title>
+  <title>Login</title>
   <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap.min.css">
@@ -21,56 +21,29 @@
       <div class="col-sm-6">
         <header>
           <nav class="navbar">
-            <a href = "index.html" class="active">Home</a>
-            <a href = "login.html">Login</a>
+            <a href = "index.html">Home</a>
+            <a href = "login.html" class="active">Login</a>
             <a href = "">Register</a>
             <a href = "">Contact Us</a>
           </nav>      
         </header>
-        
       </div>
     </div>
   </div>
-  <section class="intro">
-    <p>This program combines education and technology to get a better enrichment from the world. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+  <section class="ctitle" id="log">
+    <h1>Login</h1>
   </section>
-  <img src="images/crayon.jpg" alt="crayon" class="crayon">
-  <section class="ctitle">
-    <h1>Choose Your Program</h1>
-  </section>
-  <div class="one">
-    <section class="class1">
-      <h5 class="linkclass"><a href="index.html" class="linklinkclass">High School Degree</a></h5>
-      <ul>
-        <li>Sciences</li>
-        <li>Mathematics</li>
-        <li>Languages</li>
-      </ul>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="index.html" class="linklinkclass">AP Courses</a></h5>
-      <ul>
-        <li>Calculus AB and BC</li>
-        <li>Science</li>
-        <li>History</li>
-      </ul>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Test Practice</a></h5>
-      <ul>
-        <li>SAT</li>
-        <li>Subject SAT</li>
-        <li>ACT or TOEFL</li>
-      </ul>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Online Courses</a></h5>
-      <ul>
-        <li>Variety of Courses</li>
-        <li>Calculus</li>
-        <li>World History</li>
-      </ul>
-    </section>
+  <div class="backlogin">
+    <div class="login-page">
+      <div class="form">
+        <form class="login-form">
+          <input type="text" placeholder="username"/>
+          <input type="password" placeholder="password"/>
+          <button>login</button>
+          <p class="message">Not registered? <a href="#">Create an account</a></p>
+        </form>
+      </div>
+    </div>
   </div>
   <h1 class="ctitle">Create your Course</h1>
   <div class="two">   
@@ -106,7 +79,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </section>
   </div>
-   <div class="container-fluid">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-sm-4">
         <a href="HomePP.html"><img src="images/logoyellow.png" alt="Logo" class=logoup></a> 
@@ -129,6 +102,5 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="bootstrap-4.1.2-dist/js/bootstrap.min.js"></script>
-  <script src="js/loginjava.js"></script>
 </body>
 </html>
