Register and Contact Us
ss

--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Login</title>
+  <title>Register</title>
   <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap.min.css">
@@ -22,8 +22,8 @@
         <header>
           <nav class="navbar">
             <a href = "index.html">Home</a>
-            <a href = "login.html" class="active">Login</a>
-            <a href = "register.html">Register</a>
+            <a href = "login.html">Login</a>
+            <a href = "register.html" class="active">Register</a>
             <a href = "contactus.html">Contact Us</a>
           </nav>      
         </header>
@@ -31,16 +31,18 @@
     </div>
   </div>
   <section class="ctitle" id="log">
-    <h1>Login</h1>
+    <h1>Register</h1>
   </section>
   <div class="backlogin">
     <div class="login-page">
       <div class="form">
         <form class="login-form">
           <input type="text" placeholder="username"/>
+          <input type="email" placeholder="email adress">
           <input type="password" placeholder="password"/>
-          <button>login</button>
-          <p class="message">Not registered? <a href="register.html">Create an account</a></p>
+          <input type="password" placeholder="retype password">
+          <button>Register</button>
+          <p class="message">Already registered? <a href="login.html">Login</a></p>
         </form>
       </div>
     </div>
