--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
           <nav class="navbar">
             <a href = "index.html" class="active">Home</a>
             <a href = "login.html">Login</a>
-            <a href = "">Register</a>
-            <a href = "">Contact Us</a>
+            <a href = "register.html">Register</a>
+            <a href = "contactus.html">Contact Us</a>
           </nav>      
         </header>
-        
       </div>
     </div>
   </div>
