--- a/infoap.html
+++ b/infoap.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Home</title>
+  <title>AP Courses</title>
   <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap.min.css">
@@ -21,7 +21,7 @@
       <div class="col-sm-6">
         <header>
           <nav class="navbar">
-            <a href = "index.html" class="active">Home</a>
+            <a href = "index.html">Home</a>
             <a href = "login.html">Login</a>
             <a href = "register.html">Register</a>
             <a href = "contactus.html">Contact Us</a>
@@ -33,76 +33,71 @@
   <section class="intro">
     <p>This program combines education and technology to get a better enrichment from the world. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
   </section>
-  <img src="images/crayon.jpg" alt="crayon" class="crayon">
+  <img src="css/imagescss/crayoninfo.jpg" alt="crayon" class="crayon">
   <section class="ctitle">
-    <h1>Choose Your Program</h1>
+    <h1>AP Courses</h1>
   </section>
   <div class="one">
     <section class="class1">
-      <h5 class="linkclass"><a href="infohsd.html" class="linklinkclass">High School Degree</a></h5>
-      <ul>
-        <li>Sciences</li>
-        <li>Mathematics</li>
-        <li>Languages</li>
-      </ul>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="infoap.html" class="linklinkclass">AP Courses</a></h5>
-      <ul>
-        <li>Calculus AB and BC</li>
-        <li>Science</li>
-        <li>History</li>
-      </ul>
+    <section class="class1-2">
+      <h5 class="linkclass">Check our Classes</h5>
     </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="infotp.html" class="linklinkclass">Test Practice</a></h5>
-      <ul>
-        <li>SAT</li>
-        <li>Subject SAT</li>
-        <li>ACT or TOEFL</li>
-      </ul>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="infooc.html" class="linklinkclass">Online Courses</a></h5>
-      <ul>
-        <li>Variety of Courses</li>
-        <li>Calculus</li>
-        <li>World History</li>
-      </ul>
-    </section>
+       <p>Art History
+Biology
+Calculus AB
+Calculus BC
+Chemistry
+Chinese Language and Culture
+Computer Science A
+Computer Science Principles
+English Language and Composition
+English Literature and Composition
+Environmental Science
+European History
+French Language and Culture
+German Language and Culture
+Government and Politics (Comparative)
+Government and Politics (US)
+Human Geography
+Italian Language and Culture
+Japanese Language and Culture
+Latin
+Macroeconomics
+Microeconomics
+Music Theory
+Physics 1: Algebra-Based
+Physics 2: Algebra-Based
+Physics C: Electricity and Magnetism
+Physics C: Mechanics
+Psychology
+Spanish Language and Culture
+Spanish Literature and Culture
+Statistics
+Studio Art Drawing
+Studio Art 2-D Design
+Studio Art 3-D Design
+US History
+World History</p>
   </div>
-  <h1 class="ctitle">Create your Course</h1>
+  <h1 class="ctitle">Want another type of Courses?</h1>
   <div class="two">   
-    <section class="class1">
-      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Teachers</a></h5>
+        <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Enroll a Course</a></h5>
       <ul>
-        <li>Create your Course</li>
-        <li>Edit your Courses</li>
-        <li>Tutor Online</li>
+        <li>Programming Languages</li>
+        <li>Sociology</li>
+        <li>Business Managment</li>
       </ul>
     </section>
     <section class="class1">
-      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Schools</a></h5>
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Create your own Course</a></h5>
       <ul>
+        <li>Create Courses</li>
         <li>Create Classes</li>
-        <li>Check Progress</li>
-        <li>Have Courses</li>
+        <li>Check Students Progress</li>
       </ul>
-    </section>
-  </div> 
-  <h1 class="ctitle">Take Edu+ to your Country</h1>
-  <div class="two">   
-    <section class="class1">
-      <h5 class="linkclass"><a href="addcountry.html" class="linklinkclass">As a Student</a></h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="addcountry.html" class="linklinkclass">As a Teacher</a></h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="addcountry.html" class="linklinkclass">As a School</a></h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </section>
   </div>
   <div class="container-fluid">
