--- a/infotp.html
+++ b/infotp.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Home</title>
+  <title>Test Practice</title>
   <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="bootstrap-4.1.2-dist/css/bootstrap.min.css">
@@ -21,7 +21,7 @@
       <div class="col-sm-6">
         <header>
           <nav class="navbar">
-            <a href = "index.html" class="active">Home</a>
+            <a href = "index.html">Home</a>
             <a href = "login.html">Login</a>
             <a href = "register.html">Register</a>
             <a href = "contactus.html">Contact Us</a>
@@ -33,76 +33,49 @@
   <section class="intro">
     <p>This program combines education and technology to get a better enrichment from the world. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
   </section>
-  <img src="images/crayon.jpg" alt="crayon" class="crayon">
+  <img src="css/imagescss/crayoninfo.jpg" alt="crayon" class="crayon">
   <section class="ctitle">
-    <h1>Choose Your Program</h1>
+    <h1>Test Practice</h1>
   </section>
   <div class="one">
     <section class="class1">
-      <h5 class="linkclass"><a href="infohsd.html" class="linklinkclass">High School Degree</a></h5>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    </section>
+     <h1 class="ctitle">Choose your Test</h1>
+  <div class="two">   
+        <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">SAT</a></h5>
+      <ul>
+        <li>Reading and Writing</li>
+        <li>Math</li>
+        <li>SAT Essay</li>
+      </ul>
+    </section>
+    <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">ACT</a></h5>
+      <ul>
+        <li>Science</li>
+        <li>Reading</li>
+        <li>Math</li>
+      </ul>
+    </section>
+    <section class="class1">
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">SAT Subject</a></h5>
       <ul>
         <li>Sciences</li>
-        <li>Mathematics</li>
+        <li>Math</li>
+        <li>History</li>
         <li>Languages</li>
       </ul>
     </section>
     <section class="class1">
-      <h5 class="linkclass"><a href="infoap.html" class="linklinkclass">AP Courses</a></h5>
+      <h5 class="linkclass"><a href="index.html" class="linklinkclass">TOEFL</a></h5>
       <ul>
-        <li>Calculus AB and BC</li>
-        <li>Science</li>
-        <li>History</li>
+        <li>Listening</li>
+        <li>Written</li>
+        <li>Reading</li>
+        <li>Grammar</li>
       </ul>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="infotp.html" class="linklinkclass">Test Practice</a></h5>
-      <ul>
-        <li>SAT</li>
-        <li>Subject SAT</li>
-        <li>ACT or TOEFL</li>
-      </ul>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="infooc.html" class="linklinkclass">Online Courses</a></h5>
-      <ul>
-        <li>Variety of Courses</li>
-        <li>Calculus</li>
-        <li>World History</li>
-      </ul>
-    </section>
-  </div>
-  <h1 class="ctitle">Create your Course</h1>
-  <div class="two">   
-    <section class="class1">
-      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Teachers</a></h5>
-      <ul>
-        <li>Create your Course</li>
-        <li>Edit your Courses</li>
-        <li>Tutor Online</li>
-      </ul>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="index.html" class="linklinkclass">Schools</a></h5>
-      <ul>
-        <li>Create Classes</li>
-        <li>Check Progress</li>
-        <li>Have Courses</li>
-      </ul>
-    </section>
-  </div> 
-  <h1 class="ctitle">Take Edu+ to your Country</h1>
-  <div class="two">   
-    <section class="class1">
-      <h5 class="linkclass"><a href="addcountry.html" class="linklinkclass">As a Student</a></h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="addcountry.html" class="linklinkclass">As a Teacher</a></h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </section>
-    <section class="class1">
-      <h5 class="linkclass"><a href="addcountry.html" class="linklinkclass">As a School</a></h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </section>
   </div>
   <div class="container-fluid">
