--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-4">
-        <a href="HomePP.html"><img src="images/logoyellow.png" alt="Logo" class=logoup></a> 
+        <a href="index.html"><img src="images/logoyellow.png" alt="Logo" class=logoup></a> 
       </div>
       <div class="col-sm-2"></div>
       <div class="col-sm-6">
@@ -89,7 +89,7 @@
       <div class="col-sm-6">
         <footer>
           <div class="navbar">
-            <a href="#" class="support">Contact Us</a>
+            <a href="contactus.html" class="support">Contact Us</a>
             <a href="#" class="face">f</a>
             <a href="#" class="tweet">t</a>
             <a href="#" class="linked">in</a>
